RE #4 - Criado as traduções para os models address, bank_account, email, phone e profile_admin - Foi organizado por ordem alfabética as traduções no arquivo pt-BR.yml
- Foi adicionado no form de profile_admin os label com os seus respectivos campos com os nomes originais para que pudessem ser traduzidos
- Foi criado um metodo chamado human_enum_name no arquivo application_record.rb para que todos os models possam o utilizar para traduzir os seus respectivos atributos
- Foi ajustado na helper profile_admins_helper o metodo option_for_role para que este usasse o método human_enum_name

--- a/app/views/profile_admins/_bank_account_fields.html.erb
+++ b/app/views/profile_admins/_bank_account_fields.html.erb
@@ -1,16 +1,16 @@
 <div class="nested-fields">
-  <label>Banco</label>
+  <%= f.label :bank_name %>
   <%= f.text_field :bank_name, class: 'form-control' %>
 
-  <label>Tipo</label>
+  <%= f.label :type_account %>
   <%= f.text_field :type_account, class: 'form-control' %>
 
-  <label>Agência</label>
+  <%= f.label :agency %>
   <%= f.text_field :agency, class: 'form-control' %>
 
-  <label>Conta</label>
+  <%= f.label :account %>
   <%= f.text_field :account, class: 'form-control' %>
 
-  <label>Operação</label>
+  <%= f.label :operation %>
   <%= f.text_field :operation, class: 'form-control' %>
 </div>
