--- a/app/views/profile_admins/_email_fields.html.erb
+++ b/app/views/profile_admins/_email_fields.html.erb
@@ -1,4 +1,4 @@
 <div class="nested-fields">
-  <label>E-mail</label>
+  <%= f.label :email %>
   <%= f.text_field :email, class: 'form-control' %>
 </div>
