--- a/app/views/profile_admins/_phone_fields.html.erb
+++ b/app/views/profile_admins/_phone_fields.html.erb
@@ -1,4 +1,4 @@
 <div class="nested-fields">
-  <label>Telefone</label>
+  <%= f.label :phone %>
   <%= f.text_field :phone, class: 'form-control' %>
 </div>
