--- a/app/views/profile_admins/_address_fields.html.erb
+++ b/app/views/profile_admins/_address_fields.html.erb
@@ -1,22 +1,22 @@
 <div class="nested-fields">
-  <label>Descrição</label>
+  <%= f.label :description %>
   <%= f.text_field :description, class: 'form-control' %>
 
-  <label>CEP</label>
+  <%= f.label :zip_code %>
   <%= f.text_field :zip_code, class: 'form-control' %>
 
-  <label>Rua</label>
+  <%= f.label :street %>
   <%= f.text_field :street, class: 'form-control' %>
 
-  <label>Número</label>
+  <%= f.label :number %>
   <%= f.text_field :number, class: 'form-control' %>
 
-  <label>Bairro</label>
+  <%= f.label :neighborhood %>
   <%= f.text_field :neighborhood, class: 'form-control' %>
 
-  <label>Cidade</label>
+  <%= f.label :city %>
   <%= f.text_field :city, class: 'form-control' %>
 
-  <label>Estado</label>
+  <%= f.label :state %>
   <%= f.text_field :state, class: 'form-control' %>
 </div>
