RE #10 - Adicionando botão para criar novo escritório e outros ajustes

--- a/app/views/offices/index.html.erb
+++ b/app/views/offices/index.html.erb
@@ -1,3 +1,5 @@
+<%= link_to 'Novo Escritório', new_office_path, class: 'btn btn-success' %>
+
 <table id="example" class="table table-striped">
 
   <thead>
