RE #17 - Criação da modal para tipo de cliente

--- a/app/views/layouts/backoffice.html.erb
+++ b/app/views/layouts/backoffice.html.erb
@@ -45,6 +45,7 @@
         </div>
 
         <%= render partial: 'layouts/shared/footer' %>
+        <%= render partial: 'shared/general_modal' %>
       </div>
     </div>
 
