--- a/app/views/layouts/shared/_side_menu.html.erb
+++ b/app/views/layouts/shared/_side_menu.html.erb
@@ -23,6 +23,11 @@
             <i class="fa fa-user"></i>
             <span>Novo Cliente</span>
         </a>
+
+        <a class="nav-link" href="#" data-toggle="modal" data-target="#clientModal" >
+          <i class="fa fa-user"></i>
+          Novo Cliente
+        </a>
     </li>
 
     <li class="nav-item">
@@ -182,3 +187,55 @@
     <hr class="sidebar-divider d-none d-md-block">
 
 </ul>
+
+<div class="modal fade" id="clientModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Selecione um tipo de cliente!</h5>
+                <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">×</span>
+                </button>
+            </div>
+
+            <div class="container-modal col-md-12">
+
+              <div>
+                <%#= link_to new_client_path(type: 'pf'), class: 'btn btn-outline-primary color-btn' do %>
+                  <i class="fa fa-user fa-4x btn-icon"></i> <br>
+                  Pessoa Física
+                <%# end %>
+
+              </div>
+
+              <div>
+                <%#= link_to new_client_path(type: 'pj'), class: 'btn btn-outline-primary color-btn' do %>
+                  <i class="fa fa-building fa-4x btn-icon"></i> <br>
+                  Pessoa Jurídica
+                <%# end %>
+
+              </div>
+
+              <div>
+                <%#= link_to new_client_path(type: 'cont'), class: 'btn btn-outline-primary color-btn' do %>
+                  <i class="fa fa-users fa-4x btn-icon"></i> <br>
+                  Contador
+                <%# end %>
+
+              </div>
+
+              <div>
+                <%#= link_to new_client_path(type: 'rep'), class: 'btn btn-outline-primary color-btn' do %>
+                  <i class="fa fa-calculator fa-4x btn-icon"></i> <br>
+                  Representante Legal
+                <%# end %>
+
+              </div>
+
+            </div>
+
+        </div>
+    </div>
+</div>
