RE #17 - Cria herança e arquivos

--- a/app/views/layouts/shared/_side_menu.html.erb
+++ b/app/views/layouts/shared/_side_menu.html.erb
@@ -203,10 +203,10 @@
             <div class="container-modal col-md-12">
 
               <div>
-                <%#= link_to new_client_path(type: 'pf'), class: 'btn btn-outline-primary color-btn' do %>
+                <%= link_to new_person_path, class: 'btn btn-outline-primary color-btn' do %>
                   <i class="fa fa-user fa-4x btn-icon"></i> <br>
                   Pessoa Física
-                <%# end %>
+                <% end %>
 
               </div>
 
