--- a/app/views/representatives/_form.html.erb
+++ b/app/views/representatives/_form.html.erb
@@ -4,14 +4,8 @@
     <%= f.label :name %>
     <%= f.text_field :name %>
 
-    <%= f.label :lastname %>
-    <%= f.text_field :lastname %>
-
-    <%= f.label :cpf %>
-    <%= f.text_field :cpf %>
-
-    <%= f.label :rg %>
-    <%= f.text_field :rg %>
+    <%= f.label :type %>
+    <%= f.text_field :type %>
 
     <%= f.label :cnpj %>
     <%= f.text_field :cnpj %>
