--- a/app/views/layouts/backoffice.html.erb
+++ b/app/views/layouts/backoffice.html.erb
@@ -16,13 +16,16 @@
     <%= stylesheet_link_tag "fontawesome.all.min" %>
     <%= stylesheet_link_tag "sb-admin-2.min" %>
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= stylesheet_link_tag "steps", "data-turbo-track": "reload" %>
+    <link href="https://cdn.jsdelivr.net/npm/smartwizard@6/dist/css/smart_wizard_all.min.css" rel="stylesheet" type="text/css" />
     <%= stylesheet_link_tag "backoffice", "data-turbo-track": "reload" %>
 
     <%= javascript_include_tag "jquery.min" %>
     <%= javascript_include_tag "bootstrap.bundle.min" %>
     <%= javascript_include_tag "jquery.easing.min" %>
     <%= javascript_include_tag "sb-admin-2" %>
+
+    <script src="https://cdn.jsdelivr.net/npm/smartwizard@6/dist/js/jquery.smartWizard.min.js" type="text/javascript"></script>
+
     <%= javascript_include_tag "backoffice" %>
     <%= javascript_importmap_tags %>
 
