--- a/app/views/offices/index.html.erb
+++ b/app/views/offices/index.html.erb
@@ -25,7 +25,7 @@
         <td><%= office.society %></td>
         <td><%= office.city %></td>
         <td><%= office.site %></td>
-        <td><%= office.emails.first.email %></td>
+        <td><%#= office.emails.first.email %></td>
         <td>
           <%= link_to edit_office_path(office), class: 'btn btn-primary btn-circle' do %>
             <i class="fa fa-edit"></i>
