RE #18 - Criação de poderes com form e front feito no cadastro e edição

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,6 +8,9 @@
   --button-success: #28a745;
   --green-wizard: #1ABB9C;
   --gray-footer: #888888;
+  --sw-anchor-active-primary-color:  #1ABB9C !important;
+  --sw-anchor-done-primary-color:  rgba(42, 63, 84, 0.7) !important;
+  --sw-progress-color:: #2A3F54 !important;
 }
 // ajuste no menu sandwich
 #sidebarToggleTop{
