--- a/app/views/powers/edit.html.erb
+++ b/app/views/powers/edit.html.erb
@@ -1,2 +1,3 @@
-<h2 class="mg-left">Editando Poder <%= @power&.description %></h2>
+<h1 class="h3 mb-4 text-gray-800">Editando Poder <%= @power&.description %></h1>
+
 <%= render partial: "powers/shared/form" %>
