--- a/app/views/powers/new.html.erb
+++ b/app/views/powers/new.html.erb
@@ -1,2 +1,2 @@
-<h2 class="mg-left">Novo Poder</h2>
+<h1 class="h3 mb-4 text-gray-800">Cadastro de novo poder</h1>
 <%= render partial: "powers/shared/form" %>
