--- a/app/assets/stylesheets/backoffice.css
+++ b/app/assets/stylesheets/backoffice.css
@@ -9,6 +9,16 @@
   font-size: 1.4em;
   margin: 1em 0;
 }
+.btns{
+  padding: 0;
+  margin-top: 1.5em;
+  text-align: right;
+}
+.btns .btn-success{
+  margin-right: .5em;
+  padding-left: 30px;
+  padding-right: 30px;
+}
 /* footer */
 .footer-container{
   width: 80%;
