--- a/app/views/powers/shared/_form.html.erb
+++ b/app/views/powers/shared/_form.html.erb
@@ -7,44 +7,27 @@
   </div>
 
   <ul class="nav">
-      <li class="nav-item">
-        <a class="nav-link" href="#step-1">
-          <div class="num">1</div>
-          Dados Pessoais
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#step-2">
-          <span class="num">2</span>
-          Contato
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#step-3">
-          <span class="num">3</span>
-          Step Title
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link " href="#step-4">
-          <span class="num">4</span>
-          Step Title
-        </a>
-      </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#step-1">
+        <div class="num">1</div>
+        Descrição
+      </a>
+    </li>
   </ul>
 
-  <div class="tab-content">
+  <div class="tab-content col-12 col-md-6">
       <div id="step-1" class="tab-pane" role="tabpanel" aria-labelledby="step-1">
-          Step content
+        <%= f.label :description %>
+        <%= f.text_field :description, class: 'form-control', required: true %>
+
+        <%= f.label :category %>
+        <%= f.collection_select :category, options_for_categories, :first, :second, {prompt: 'Selecione uma categoria'}, {class: 'form-control', required: true} %>
+
+      <div class="btns">
+        <button type="submit" class="btn btn-success">Salvar</button>
+        <%= link_to 'Cancelar', powers_path, class: 'btn btn-outline-danger'%>
       </div>
-      <div id="step-2" class="tab-pane" role="tabpanel" aria-labelledby="step-2">
-          Step content
-      </div>
-      <div id="step-3" class="tab-pane" role="tabpanel" aria-labelledby="step-3">
-          Step content
-      </div>
-      <div id="step-4" class="tab-pane" role="tabpanel" aria-labelledby="step-4">
-          Step content
+
       </div>
   </div>
 
@@ -52,52 +35,13 @@
 
 <% end %>
 
-
 <script type="text/javascript">
   $('#smartwizard').smartWizard({
-    selected: 0, // Initial selected step, 0 = first step
-    theme: 'arrows', // theme for the wizard, can be: basic, arrows, square, round, dots
-    justified: true, // Nav menu justification. true/false
-    autoAdjustHeight: true, // Automatically adjust content height
-    backButtonSupport: true, // Enable the back button support
-    enableUrlHash: true, // Enable selection of the step based on url hash
-    transition: {
-        animation: 'none', // Animation effect on navigation, none|fade|slideHorizontal|slideVertical|slideSwing|css(Animation CSS class also need to specify)
-        speed: '400', // Animation speed. Not used if animation is 'css'
-        easing: '', // Animation easing. Not supported without a jQuery easing plugin. Not used if animation is 'css'
-        prefixCss: '', // Only used if animation is 'css'. Animation CSS prefix
-        fwdShowCss: '', // Only used if animation is 'css'. Step show Animation CSS on forward direction
-        fwdHideCss: '', // Only used if animation is 'css'. Step hide Animation CSS on forward direction
-        bckShowCss: '', // Only used if animation is 'css'. Step show Animation CSS on backward direction
-        bckHideCss: '', // Only used if animation is 'css'. Step hide Animation CSS on backward direction
-    },
+    theme: 'arrows',
+    justified: false,
+    autoAdjustHeight: true,
     toolbar: {
-        position: 'bottom', // none|top|bottom|both
-        showNextButton: true, // show/hide a Next button
-        showPreviousButton: true, // show/hide a Previous button
-        extraHtml: '' // Extra html to show on toolbar
+        position: 'none'
     },
-    anchor: {
-        enableNavigation: true, // Enable/Disable anchor navigation
-        enableNavigationAlways: false, // Activates all anchors clickable always
-        enableDoneState: true, // Add done state on visited steps
-        markPreviousStepsAsDone: true, // When a step selected by url hash, all previous steps are marked done
-        unDoneOnBackNavigation: false, // While navigate back, done state will be cleared
-        enableDoneStateNavigation: true // Enable/Disable the done state navigation
-    },
-    keyboard: {
-        keyNavigation: true, // Enable/Disable keyboard navigation(left and right keys are used if enabled)
-        keyLeft: [37], // Left key code
-        keyRight: [39] // Right key code
-    },
-    lang: { // Language variables for button
-        next: 'Next',
-        previous: 'Previous'
-    },
-    disabledSteps: [], // Array Steps disabled
-    errorSteps: [], // Array Steps error
-    warningSteps: [], // Array Steps warning
-    hiddenSteps: [], // Hidden steps
-    getContent: null // Callback function for content loading
   });
 </script>
