--- a/app/views/accountings/_form.html.erb
+++ b/app/views/accountings/_form.html.erb
@@ -1,26 +1,104 @@
 <div id="example-basic">
-  <h3>Dados do Contador</h3>
-  <section>
-    <%= f.label :name %>
-    <%= f.text_field :name %>
+  <div id="smartwizard">
 
-    <%= f.label :lastname %>
-    <%= f.text_field :lastname %>
-  </section>
+    <div class="progress">
+      <div class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+    </div>
 
-  <%= render partial: 'shared/contacts', locals: { f: f }  %>
+    <ul class="nav">
+      <li class="nav-item">
+        <a class="nav-link" href="#step-1">
+          <div class="num">1</div>
+          Dados pessoais
+        </a>
+      </li>
 
-  <h3>Extras</h3>
-  <section>
-    <%= check_box_tag :flag_access_data, 1, true, id: 'access-email' %>
-    <label for="access-email"> Enviar os dados de acesso </label>
+      <li class="nav-item">
+        <a class="nav-link" href="#step-1">
+          <div class="num">2</div>
+          Contato
+        </a>
+      </li>
 
-    <%= check_box_tag :flag_generate_documents, 1, false, id: 'access-docs' %>
-    <label for="access-docs"> Emitir documentos </label>
+      <li class="nav-item">
+        <a class="nav-link" href="#step-1">
+          <div class="num">3</div>
+          Opções
+        </a>
+      </li>
+    </ul>
 
-    <%= check_box_tag :flag_signature, 1, false, id: 'access-data' %>
-    <label for="access-data"> Enviar para assinatura </label>
+    <div class="tab-content col-12 col-md-6">
+      <div id="step-1" class="tab-pane" role="tabpanel" aria-labelledby="step-1">
+        <%= f.label :name %>
+        <%= f.text_field :name, class:'form-control' %>
 
-  </section>
+        <%= f.label :lastname %>
+        <%= f.text_field :lastname, class:'form-control' %>
+      </div>
 
+      <div id="step-2" class="tab-pane" role="tabpanel" aria-labelledby="step-2">
+        <%= render partial: 'shared/contacts', locals: { f: f }  %>
+      </div>
+
+      <div id="step-3" class="tab-pane" role="tabpanel" aria-labelledby="step-3">
+        <%= render partial: 'profile_customers/shared/option_fields', locals: { f: f }  %>
+
+        <div class="btns">
+          <button type="submit" class="btn btn-success">Salvar</button>
+          <%= link_to 'Cancelar', powers_path, class: 'btn btn-outline-danger'%>
+        </div>
+      </div>
+
+    </div>
+  </div>
 </div>
+
+<script type="text/javascript">
+  $('#smartwizard').smartWizard({
+    selected: 0,
+    theme: 'arrows',
+    justified: false,
+    autoAdjustHeight: true,
+    backButtonSupport: false,
+    enableUrlHash: true,
+    transition: {
+        animation: 'fade',
+        speed: '400',
+        easing: '',
+        prefixCss: '',
+        fwdShowCss: '',
+        fwdHideCss: '',
+        bckShowCss: '',
+        bckHideCss: '',
+    },
+    toolbar: {
+        position: 'bottom',
+        showNextButton: true,
+        showPreviousButton: true,
+        extraHtml: ''
+    },
+    anchor: {
+        enableNavigation: true,
+        enableNavigationAlways: false,
+        enableDoneState: true,
+        markPreviousStepsAsDone: true,
+        unDoneOnBackNavigation: false,
+        enableDoneStateNavigation: true
+    },
+    keyboard: {
+        keyNavigation: false,
+        keyLeft: [37],
+        keyRight: [39]
+    },
+    lang: {
+        next: 'Próximo',
+        previous: 'Anterior'
+    },
+    disabledSteps: [],
+    errorSteps: [],
+    warningSteps: [],
+    hiddenSteps: [],
+    getContent: null
+  });
+</script>
