--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -53,3 +53,8 @@
   background: #AAAAAA;
   margin-top: .3em;
 }
+// checkboxes
+.form-check-input:checked{
+  background-color: var(--green-wizard);
+  border-color: var(--green-wizard);
+}
