--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -1,67 +1,151 @@
 <div id="example-basic">
-  <h3>Dados da Empresa</h3>
-  <section>
-    <%= f.label :name %>
-    <%= f.text_field :name %>
+  <div id="smartwizard">
 
-    <%= f.label :cnpj %>
-    <%= f.text_field :cnpj %>
-  </section>
+    <div class="progress">
+      <div class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+    </div>
 
-  <h3>Endereço</h3>
-  <section>
-    <%= link_to_add_association "Adicionar endereço", f, :addresses, 'data-association-isertion-node':'#addresses-group', 'data-association-insertion-method':'after', class:'btn btn-success' %>
+    <ul class="nav">
+      <li class="nav-item">
+        <a class="nav-link" href="#step-1">
+          <div class="num">1</div>
+          Dados pessoais
+        </a>
+      </li>
 
-    <%= f.fields_for :addresses do |address|%>
-        <%= render partial: 'address_fields', locals: {f: address} %>
-    <% end %>
-  </section>
+      <li class="nav-item">
+        <a class="nav-link" href="#step-2">
+          <div class="num">2</div>
+          Endereço
+        </a>
+      </li>
 
-  <%= render partial: 'shared/contacts', locals: { f: f }  %>
+      <li class="nav-item">
+        <a class="nav-link" href="#step-2">
+          <div class="num">3</div>
+          Contato e Representante
+        </a>
+      </li>
 
-  <h3>Representante</h3>
-  <section>
+      <li class="nav-item">
+        <a class="nav-link" href="#step-2">
+          <div class="num">4</div>
+          Dados Bancários
+        </a>
+      </li>
 
-  </section>
+      <li class="nav-item">
+        <a class="nav-link" href="#step-2">
+          <div class="num">5</div>
+          Arquivos
+        </a>
+      </li>
+    </ul>
 
-  <h3>Dados Bancários</h3>
-  <section>
-    <%= link_to_add_association "Adicionar conta", f, :bank_accounts, 'data-association-isertion-node':'#bank-account-group', 'data-association-insertion-method':'after', class:'btn btn-success' %>
-    <%= f.fields_for :bank_accounts do |bank|%>
-      <%= render partial: 'bank_account_fields', locals: {f: bank} %>
-    <% end %>
-  </section>
+    <div class="tab-content col-12 col-md-6">
+      <div id="step-1" class="tab-pane" role="tabpanel" aria-labelledby="step-1">
+        <%= f.label :name %>
+        <%= f.text_field :name, class: 'form-control' %>
 
-
-  <h3>Arquivos</h3>
-  <section>
-    <!-- <div class="col-md-6">
-      <label>Adicionar arquivos</label>
-      <%#= f.file_field :files, multiple: true %>
-      <small class="form-text text-muted">
-        Formatos aceitos: JPEG, PNG e PDF.
-      </small>
-
-      <%# if @profile_customer.errors.any? %>
-      <div id="error_explanation">
-        <ul>
-          <%# @profile_customer.errors.each do |error| %>
-          <p><%#= error.full_message %></p>
-          <%# end %>
-        </ul>
+        <%= f.label :cnpj %>
+        <%= f.text_field :cnpj, class: 'form-control' %>
       </div>
-      <%# else %>
-        <%# if @profile_customer.files != nil %>
-          <%# @profile_customer.files.each do |file| %>
-            <li>
-              <%#= link_to file.filename, url_for(file) %>
-              <%#= link_to ("X"), profile_customer_file_upload_path(@profile_customer, file), method: :delete, data: { confirm: "Tem certeza?" }, class:"btn btn-outline btn-danger" %>
-            </li>
 
+      <div id="step-2" class="tab-pane" role="tabpanel" aria-labelledby="step-2">
+        <%= render partial: 'shared/addresses', locals: { f: f }  %>
+      </div>
+
+      <div id="step-3" class="tab-pane" role="tabpanel" aria-labelledby="step-3">
+        <%= render partial: 'shared/contacts', locals: { f: f }  %>
+      </div>
+
+      <div id="step-4" class="tab-pane" role="tabpanel" aria-labelledby="step-4">
+        <%= render partial: 'shared/bank_accounts', locals: { f: f }  %>
+      </div>
+
+      <div id="step-5" class="tab-pane" role="tabpanel" aria-labelledby="step-5">
+        <label>Adicionar arquivos</label>
+
+        <%#= f.file_field :files, multiple: true %>
+          <!-- <small class="form-text text-muted">
+            Formatos aceitos: JPEG, PNG e PDF.
+          </small> -->
+
+        <%# if @profile_customer.errors.any? %>
+          <!-- <div id="error_explanation"> -->
+            <!-- <ul> -->
+              <%# @profile_customer.errors.each do |error| %>
+              <!-- <p><%#= error.full_message %></p> -->
+              <%# end %>
+            <!-- </ul>
+          </div> -->
+        <%# elsif @profile_customer.files != nil %>
+          <%# @profile_customer.files.each do |file| %>
+            <!-- <li> -->
+              <%#= link_to file.filename, url_for(file) %>
+              <%#= link_to ("X"), client_file_upload_path(@profile_customer, file), method: :delete, data: { confirm: "Tem certeza?" }, class:"adj100 btn btn-outline btn-danger btn-remove" %>
+            <!-- </li> -->
           <%# end %>
         <%# end %>
-      <%# end %>
-    </div> -->
-  </section>
 
+        <%= render partial: 'profile_customers/shared/option_fields', locals: { f: f }  %>
+
+        <div class="btns">
+          <button type="submit" class="btn btn-success">Salvar</button>
+          <%= link_to 'Cancelar', powers_path, class: 'btn btn-outline-danger'%>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
 </div>
+
+<script type="text/javascript">
+  $('#smartwizard').smartWizard({
+    selected: 0,
+    theme: 'arrows',
+    justified: false,
+    autoAdjustHeight: true,
+    backButtonSupport: false,
+    enableUrlHash: true,
+    transition: {
+        animation: 'fade',
+        speed: '400',
+        easing: '',
+        prefixCss: '',
+        fwdShowCss: '',
+        fwdHideCss: '',
+        bckShowCss: '',
+        bckHideCss: '',
+    },
+    toolbar: {
+        position: 'bottom',
+        showNextButton: true,
+        showPreviousButton: true,
+        extraHtml: ''
+    },
+    anchor: {
+        enableNavigation: true,
+        enableNavigationAlways: false,
+        enableDoneState: true,
+        markPreviousStepsAsDone: true,
+        unDoneOnBackNavigation: false,
+        enableDoneStateNavigation: true
+    },
+    keyboard: {
+        keyNavigation: false,
+        keyLeft: [37],
+        keyRight: [39]
+    },
+    lang: {
+        next: 'Próximo',
+        previous: 'Anterior'
+    },
+    disabledSteps: [],
+    errorSteps: [],
+    warningSteps: [],
+    hiddenSteps: [],
+    getContent: null
+  });
+</script>
