--- a/app/views/accountings/_form.html.erb
+++ b/app/views/accountings/_form.html.erb
@@ -30,6 +30,8 @@
 
     <div class="tab-content col-12 col-md-6">
       <div id="step-1" class="tab-pane" role="tabpanel" aria-labelledby="step-1">
+        <%= f.number_field :customer_id, class: 'form-control' %>
+
         <%= f.label :name %>
         <%= f.text_field :name, class:'form-control' %>
 
