--- a/app/views/layouts/shared/_side_menu.html.erb
+++ b/app/views/layouts/shared/_side_menu.html.erb
@@ -19,15 +19,15 @@
     </div>
 
     <li class="nav-item">
-        <a class="nav-link" href="#" >
+        <a
+          class="nav-link"
+          href="#"
+          data-toggle="modal"
+          data-target="#clientModal">
             <i class="fa fa-user"></i>
             <span>Novo Cliente</span>
         </a>
 
-        <a class="nav-link" href="#" data-toggle="modal" data-target="#clientModal" >
-          <i class="fa fa-user"></i>
-          Novo Cliente
-        </a>
     </li>
 
     <li class="nav-item">
@@ -103,7 +103,7 @@
                 <div class="collapse-divider"></div>
 
                 <h6 class="collapse-header">Gerenciamento:</h6>
-                <%= link_to powers_index_path, class:'collapse-item' do %>
+                <%= link_to powers_path, class:'collapse-item' do %>
                   <i class="fa fa-gavel"></i> Poderes
                 <% end %>
             </div>
