--- a/app/views/layouts/shared/_side_menu.html.erb
+++ b/app/views/layouts/shared/_side_menu.html.erb
@@ -205,10 +205,9 @@
 
 </ul>
 
-<div class="modal fade" id="clientModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-    aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
+<div id="clientModal" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
 
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLabel">Selecione um tipo de cliente!</h5>
@@ -219,29 +218,29 @@
 
             <div class="container-modal col-md-12">
 
-              <div>
-                <%= link_to new_person_path, class: 'btn btn-outline-primary color-btn' do %>
+              <div class="client-choose">
+                <%= link_to new_person_path, class: 'btn color-btn' do %>
                   <i class="fa fa-user fa-4x btn-icon"></i> <br>
                   Pessoa Física
                 <% end %>
               </div>
 
-              <div>
-                <%= link_to new_company_path, class: 'btn btn-outline-primary color-btn' do %>
+              <div class="client-choose">
+                <%= link_to new_company_path, class: 'btn color-btn' do %>
                   <i class="fa fa-building fa-4x btn-icon"></i> <br>
                   Pessoa Jurídica
                 <% end %>
               </div>
 
-              <div>
-                <%= link_to new_accounting_path, class: 'btn btn-outline-primary color-btn' do %>
+              <div class="client-choose">
+                <%= link_to new_accounting_path, class: 'btn color-btn' do %>
                   <i class="fa fa-users fa-4x btn-icon"></i> <br>
                   Contador
                 <% end %>
               </div>
 
-              <div>
-                <%= link_to new_representative_path, class: 'btn btn-outline-primary color-btn' do %>
+              <div class="client-choose">
+                <%= link_to new_representative_path, class: 'btn color-btn' do %>
                   <i class="fa fa-calculator fa-4x btn-icon"></i> <br>
                   Representante Legal
                 <% end %>
