RE #17 - Ajuste no formulário de contato do cadastro de clientes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -62,3 +62,7 @@ body{
   background-color: var(--green-wizard);
   border-color: var(--green-wizard);
 }
+// fix tab-content form wizard
+.tab-content{
+  height: auto !important;
+}
