RE #17 - Altera posição da linha de status de preenchimento dos forms

--- a/app/views/shared/_bank_accounts.html.erb
+++ b/app/views/shared/_bank_accounts.html.erb
@@ -1,5 +1,8 @@
-<%= link_to_add_association "Adicionar conta", f, :bank_accounts, 'data-association-isertion-node':'#bank-account-group', 'data-association-insertion-method':'after', class:'btn btn-success' %>
+<fieldset>
+  <legend id="bank-account-group" class="form-title">Dados da conta bancária</legend>
+  <%= link_to_add_association "Adicionar conta", f, :bank_accounts, 'data-association-isertion-node':'#bank-account-group', 'data-association-insertion-method':'after', class:'btn btn-success' %>
 
-<%= f.fields_for :bank_accounts do |bank|%>
-  <%= render partial: 'bank_account_fields', locals: {f: bank} %>
-<% end %>
+  <%= f.fields_for :bank_accounts do |bank|%>
+    <%= render partial: 'bank_account_fields', locals: {f: bank} %>
+  <% end %>
+</fieldset>
