--- a/app/views/shared/_addresses.html.erb
+++ b/app/views/shared/_addresses.html.erb
@@ -1,5 +1,8 @@
-<%= link_to_add_association "Adicionar endereço", f, :addresses, 'data-association-isertion-node':'#addresses-group', 'data-association-insertion-method':'after', class:'btn btn-success' %>
+<fieldset>
+  <legend id="addresses-group" class="form-title">Endereço Principal</legend>
+  <%= link_to_add_association "Adicionar endereço", f, :addresses, 'data-association-isertion-node':'#addresses-group', 'data-association-insertion-method':'after', class:'btn btn-success' %>
 
-<%= f.fields_for :addresses do |address|%>
-    <%= render partial: 'address_fields', locals: {f: address} %>
-<% end %>
+  <%= f.fields_for :addresses do |address|%>
+      <%= render partial: 'address_fields', locals: {f: address} %>
+  <% end %>
+</fieldset>
